--- a/war/css/global.css
+++ b/war/css/global.css
@@ -1,1 +1,17 @@
 @charset "utf-8";
+
+body {color:#333;}
+
+/* Whole margin */
+#menu, .actions {padding:10px 0 0 30px;}
+h1, #content table {margin:20px 0 0 30px;}
+
+h1 {border-left:5px solid #427bb5; clear:both; font-size:150%; padding-left:5px;}
+
+#menu {background:#427bb5; border-bottom:3px solid #666; color:#fff; height:3em; padding-bottom:10px;}
+#menu li {float:left; margin-right:20px;}
+#menu a {color:#fff; font-weight:bold; text-decoration:none;}
+#menu span {font-size:80%; font-weight:normal; display:block; padding-top:5px;}
+
+th, td {padding:2px 5px;}
+th {background:#333; font-size:90%; color:#fff; text-align:left;}
