--- a/war/css/global.css
+++ b/war/css/global.css
@@ -1,22 +1,23 @@
 @charset "utf-8";
 
-body {color:#333; font-family:Verdana, 'ＭＳ Ｐゴシック', 'Osaka', Arial, sans-serif;}
+body {color:#333; font-size:90%; font-family:Verdana, 'ＭＳ Ｐゴシック', 'Osaka', Arial, sans-serif;}
 a {color:#033275;}
 h1 {color:#ff5300; clear:both; font-size:130%; font-weight:bold; text-indent:-2px;}
 
 /* margin */
-#menu {padding:10px 30px 0 30px;}
-.actions {padding:5px 30px 5px 30px;}
-#content p {margin:20px 30px 0 30px;}
-#content table {margin:10px 30px 0 30px;}
-#footer {padding:10px 30px 10px 30px; margin-top:20px;}
-#copyright {margin-top:10px;}
-h1 {margin:20px 30px 0 30px;}
+#menu {padding:1em 30px 0 30px;}
+.actions {padding:.5em 30px;}
+#content p {margin:1em 30px 0 30px;}
+#content table {margin:0 30px 0 30px;}
+#footer {padding:1em 30px 1em 30px; margin-top:2em;}
+#copyright {margin-top:1em;}
+h1 {margin:1em 30px 1em 30px;}
 
 /* table */
 th, td {padding:2px 4px;}
 .list {border:1px solid #a67f00;}
 .list th {background:#a67f00; font-size:80%; color:#ffde73; text-align:center;}
+.list a {text-decoration:none;}
 .form {border-collapse:separate; border-spacing:1px;}
 .form th {background:#a67f00; font-size:80%; color:#ffde73; }
 .odd {background:#eee;}
