--- a/war/css/global.css
+++ b/war/css/global.css
@@ -1,12 +1,14 @@
 @charset "utf-8";
 
 body {color:#333; font-size:90%; font-family:Verdana, 'ＭＳ Ｐゴシック', 'Osaka', Arial, sans-serif;}
-a {color:#033275;}
+a {color:#033275; text-decoration:none;}
+a:hover {text-decoration:underline;}
 h1 {color:#ff5300; clear:both; font-size:130%; font-weight:bold; text-indent:-2px;}
 
 /* margin */
 #menu {padding:1em 30px 0 30px;}
 .actions {padding:.5em 30px;}
+.masters {padding:1em 30px 0 30px; text-align:right;}
 #content p {margin:1em 30px 0 30px;}
 #content table {margin:0 30px 0 30px;}
 #footer {padding:1em 30px 1em 30px; margin-top:2em;}
@@ -17,7 +19,7 @@ h1 {margin:1em 30px 1em 30px;}
 th, td {padding:2px 4px;}
 .list {border:1px solid #a67f00;}
 .list th {background:#a67f00; font-size:80%; color:#ffde73; text-align:center;}
-.list a {text-decoration:none;}
+.list a {font-size:80%;}
 .form {border-collapse:separate; border-spacing:1px;}
 .form th {background:#a67f00; font-size:80%; color:#ffde73; }
 .odd {background:#eee;}
@@ -25,12 +27,11 @@ th, td {padding:2px 4px;}
 .error {color:#f00; margin-left:3px;}
 
 #menu {background:#3f8eda; border-top:10px solid #69a2da; color:#fff; height:2em; padding-bottom:10px;}
-#menu a {float:left; margin-right:20px; color:#fff; font-weight:bold; text-decoration:none;}
-#menu a:hover {text-decoration:underline;}
+#menu a {float:left; margin-right:20px; color:#fff; font-weight:bold;}
 #menu span {font-size:80%; font-weight:normal; display:block;}
 
 .actions {background:#ffde73; border-top:2px solid #eee; color:#a67f00;}
-.actions a {color:#a63600; font-size:90%; text-decoration:none;}
+.actions a {color:#a63600; font-size:90%;}
 
 #footer {background:#eee; font-size:80%; text-align:center;}
 
