--- a/war/css/global.css
+++ b/war/css/global.css
@@ -8,7 +8,7 @@ h1 {color:#ff5300; clear:both; font-size:130%; font-weight:bold; text-indent:-2p
 /* margin */
 #menu {padding:1em 30px 0 30px;}
 .actions {padding:.5em 30px;}
-.masters {padding:1em 30px 0 30px; text-align:right;}
+.masters {padding:1em 30px 0 30px; text-align:center;}
 #content p {margin:1em 30px 0 30px;}
 #content table {margin:0 30px 0 30px;}
 #footer {padding:1em 30px 1em 30px; margin-top:2em;}
