--- a/war/css/global.css
+++ b/war/css/global.css
@@ -46,7 +46,9 @@ th, td {padding:2px 4px;}
 
 /* navigation */
 .navigation {list-style:none;}
-.navigation li {background:#326bba; color:#fff; display:block;
-	float:left; line-height:1em; margin:0 2px 1em 0; width:1em;
+.navigation li {background:#a67f00; color:#fff; display:block;
+	float:left; line-height:1em; margin:0 2px 1em 0;
 	text-align:center; vertical-align:middle;}
-.navigation a {background:#d8c061; color:#fff; display:block;}
+.navigation .active {background:#a67f00; color:#fff; display:block; padding:1px 3px;}
+.navigation a {background:#d8c061; color:#fff; display:block;
+	padding:1px 3px; text-decoration:none;}
